# habits

./: README.md  pyproject.toml
habits/: settings.py
record/: admin.py  models.py
record/migrations/: 0001_initial.py  0002_rename_checkinsymptoms_checkinsymptom_and_more.py  0003_alter_behavior_name_alter_checkin_datetime_and_more.py
