[tool.poetry]
name = "habits"
version = "0.1.0"
description = "A habits x symptoms x behaviors tracker"
authors = ["Felipe Ruhland <dev@feliperuhland.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
